cip-macros/tests/ui/object_impl_missing_service_id.stderr
error: The #[service] attribute expects an ID of u8 (0-255) type. Ex: #[service(0x0E)]
  --> tests/ui/object_impl_missing_service_id.rs:15:5
   |
15 |     #[service()]
   |     ^
